--- a/03.Linki_i_ramka/index.html
+++ b/03.Linki_i_ramka/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Task 3</title>
 </head>
+
 <body>
+    <ul>
+        <li>Beautiful Website in 2014 and 2015 
+            <ul>
+                <li> 
+                    <a href="http://www.awwwards.com" target="_blank">
+                        Awwards
+                    </a>
+                </li>
+                <li>
+                    <a href="http://www.behance.net" target="_blank">
+                        Behance
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li>Useful tools for web developers 
+            <ul>
+                <li> 
+                    <a href="http://www.creativebloq.com">
+                        Creative blog
+                    </a>
+                </li>
+                <li>
+                     <a href="http://tutorialzine.com">
+                        Tutorialzine
+                    </a>
+                </li>
+            </ul>
+        </li>
+    </ul>
+    <iframe width="800" height="600"src="https://www.computerworld.com/"></iframe>
+    
 
 </body>
+
 </html>
