--- a/04.Linki_i_obrazki/index.html
+++ b/04.Linki_i_obrazki/index.html
@@ -5,6 +5,7 @@
     <title>Task 4</title>
 </head>
 <body>
-
-</body>
+        <p><h3> &nbsp; &nbsp;Coder Lab! Kliknij w obrazek by dowiedzieć się więcej .</h3> 
+            <br><br>
+            <a href="https://coderslab.pl/pl/" target="_blank"><img src="images/frontend-backend.jpg"></a></p>
 </html>
