--- a/06.CSS_Kaskadowe_arkusze_stylow/index.html
+++ b/06.CSS_Kaskadowe_arkusze_stylow/index.html
@@ -3,8 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Task 6</title>
-</head>
+    <link href ="06.CSS_Kaskadowe_arkusze_stylow/06zad.css"  rel= "stylesheet" type="tekst/css" />
+
+
 <body>
+
+       <p id="first-paragraph"><font color=green>Jestem zielony</font></p>
+       <p id="second-paragraph"><font color=pink>Jestem rozowyt</font></p>
+         <font color = brown>
+            <p>Jestem brazowy</p>
+            <p>Jestem brazowy</p>
+            <p>Jestem brazowy</p>
+            <p>Jestem brazowy</p>
+            <p>Jestem brazowy</p>
+            
+        </font> 
+</body>
+</head>
+
+
+
+<style>
+    #block {
+      background-color:white;
+      border:3px solid red;
+      font-size:1.4em;
+      width: 100px;
+      height:50px;
+    }
+
+
+  </style>
+</head>
+
+<body>
+
+  <div id="block">div</div>
+  <div id="block">div</div>
+  <div id="block">div</div>
+  <div id="block">div</div>
+  <div id="block">div</div>
 
 </body>
 </html>
