--- a/08.Elementy_obok_siebie/index.html
+++ b/08.Elementy_obok_siebie/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <title>Task 8</title>
 
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id ="first-div" class="box"></div>
+    <div id ="second-div" class="box" > </div>
+    <br>
+    <p>
+     Paragraf 1
+    </p>
+    <p>
+     Paragraf 2
+    </p>
+
 </body>
 </html>
