--- a/09.Kolory_i_jednostki_w_CSS/index.html
+++ b/09.Kolory_i_jednostki_w_CSS/index.html
@@ -2,9 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="class.css" rel="stylesheet">
     <title></title>
 </head>
 <body>
-    
+   <span>
+    <font color="red">
+        tekst
+    </font>
+   </span> 
+   <span>
+       <font color="blue">
+           tekst
+       </font>
+
+   </span>
+   <p>
+       <span>
+           <font color ="blue">
+               CSS
+           </font>
+       </span>
+       <span>
+            <font color ="green">
+                jest
+            </font>
+        </span>
+        <span>
+                <font color ="pink">
+                    wspanialy!
+                </font>
+            </span>
+   </p>
+   <div class="ColorUunits">
+<p id="first">
+    7 tekst
+</p>
+<p id="second">
+    5 tekst
+
+</p>
+<p id="third">
+    4 tekst </p>
+
+
+   </div>
+
+   <div class="container">
+
+    <p class="first">
+        dowolny tekst
+    </p>
+    <p class="second">
+        dowolny tekst 
+    </p>
+   </div>
 </body>
 </html>
