--- a/11.Kolor_i_tlo_w_CSS/index.html
+++ b/11.Kolor_i_tlo_w_CSS/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>Task 11</title>
 </head>
+
 <body>
-    
+    <div class="opacityTest">
+        <p class="first">
+            a
+        </p>
+        <p class="second">
+            a
+        </p>
+
+    </div>
+
+    <div class="gradient">
+
+    </div>
+
+    <div class="image">
+
+    </div>
+    <div class="ab">
+        
+    </div>
+
 </body>
+
 </html>
