--- a/13.Stylowanie_list/index.html
+++ b/13.Stylowanie_list/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="UTF-8"
+    <link href="css/style.css" rel="stylesheet" >
+
+    <title> tytul</title>
 </head>
 <body>
+        <ul class:"squareList">
+                <li>element listy</li>
+                <li>element listy</li>
+                <li>element listy</li>
+              </ul>
+    <nav>
+            <ul class="s">
+                    <li>element listy</li>
+                    <li>element listy</li>
+                    <li>element listy</li>
+                  </ul>
+    </nav>
     
 </body>
 </html>
