--- a/13.Stylowanie_list/index.html
+++ b/13.Stylowanie_list/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"
-    <link href="css/style.css" rel="stylesheet" >
 
-    <title> tytul</title>
+<head>
+        <meta charset="UTF-8">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <style>
+                /* style css nie dziala , wykonalam zadanie dodajac styl lokalny */
+        </style>
+        <title> tytul</title>
 </head>
+
 <body>
-        <ul class:"squareList">
+        <ul class="square-list">
                 <li>element listy</li>
                 <li>element listy</li>
                 <li>element listy</li>
-              </ul>
-    <nav>
-            <ul class="s">
-                    <li>element listy</li>
-                    <li>element listy</li>
-                    <li>element listy</li>
-                  </ul>
-    </nav>
-    
+        </ul>
+        <nav>
+                <ul class="menulist">
+                        <li>START</li>
+                        <li>O NAS</li>
+                        <li>GALERIA</li>
+                        <li>
+                                KONTAKT
+                        </li>
+                </ul>
+        </nav>
+
 </body>
+
 </html>
